--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A revolutionary math editor",
   "main": "ts-built/main/main.js",
   "scripts": {
-    "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "html": "copyfiles -u 1 src/**/*.html src/**/*.css ts-built/"
+    "copy": "copyfiles -u 1 src/**/*.html src/**/*.css ts-built/",
+    "compile": "tsc"
   },
   "author": "Juho Pesonen",
   "license": "ISC",
@@ -16,7 +15,7 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "jquery": "^3.6.4",
-    "mathquill": "^0.10.1-a"
+    "@digabi/mathquill": "^0.10.12",
+    "jquery": "^3.6.4"
   }
 }
