--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,10 @@
   "compilerOptions": {
     "target": "ES2021",
     "module": "ES2022",
+    "moduleResolution": "node",
     "rootDir": "src",
     "outDir": "ts-built",
     "inlineSources": true,
-    "sourceMap": true
+    "sourceMap": true,
   }
 }
